# zenhabits-project

./: .gitignore  README.md
docs/: .~lock.AlbaAlmoril_MemoriaZenHabits.odt#  AlbaAlmoril_MemoriaZenHabits.odt  AlbaAlmoril_MemoriaZenhabits.docx  ~$baAlmoril_MemoriaZenhabits.docx  ~WRL0354.tmp  ~WRL1264.tmp  ~WRL1863.tmp
docs/anteproyecto/: AlbaAlmoril_Anteproyecto.docx
docs/gestion/: AlbaAlmoril_Tareas.xlsx
zenhabits_app/: README.md  pubspec.yaml
zenhabits_app/android/app/: build.gradle.kts
zenhabits_app/ios/Runner/: Info.plist
zenhabits_app/ios/Runner.xcodeproj/: project.pbxproj
zenhabits_app/lib/: main.dart
zenhabits_app/lib/core/constants/: api_endpoints.dart  local_errors.dart  local_messages.dart  remote_errors.dart  remote_log_messages.dart
zenhabits_app/lib/data/api/: remote_habit_datasource.dart
zenhabits_app/lib/data/database/: zenhabits_database.dart  zenhabits_database.g.dart
zenhabits_app/linux/: CMakeLists.txt
zenhabits_app/linux/runner/: my_application.cc
zenhabits_app/macos/Runner.xcodeproj/: project.pbxproj
zenhabits_app/test/: widget_test.dart
zenhabits_app/web/: index.html  manifest.json
zenhabits_app/windows/: CMakeLists.txt
zenhabits_app/windows/runner/: Runner.rc  main.cpp
zenhabits_server/: Cargo.toml
zenhabits_server/docker/: Dockerfile  docker-compose.yml
zenhabits_server/sql/: init.sql
zenhabits_server/src/: db.rs  main.rs
zenhabits_server/src/models/: habit.rs  mod.rs  user.rs
zenhabits_server/src/routes/: check_handler.rs  delete_user_handler.rs  load_data_handler.rs  mod.rs  save_data_handler.rs
(+53 files in other folders)
